# node-rust-cdylib

./: Cargo.toml  README.md  package-lock.json  package.json
node/: main.js  matrix.js
src/: lib.rs
