[package]
name = "cdylib-nodejs"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quad-rand = "0.2.1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
